--- a/code/ml/project_ml2.ipynb
+++ b/code/ml/project_ml2.ipynb
@@ -196,206 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "id": "9364e386-da55-45bc-802d-03ecc7cfee11",
    "metadata": {
     "tags": []
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: Ignoring non-Spark config property: fs.s3a.aws.credentials.provider\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":: loading settings :: url = jar:file:/opt/conda/lib/python3.10/site-packages/pyspark/jars/ivy-2.5.1.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /root/.ivy2/cache\n",
-      "The jars for the packages stored in: /root/.ivy2/jars\n",
-      "com.johnsnowlabs.nlp#spark-nlp_2.12 added as a dependency\n",
-      "org.apache.hadoop#hadoop-aws added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-ad061c92-3e4d-41ab-829c-93e34080ce9f;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound com.johnsnowlabs.nlp#spark-nlp_2.12;5.1.3 in central\n",
-      "\tfound com.typesafe#config;1.4.2 in central\n",
-      "\tfound org.rocksdb#rocksdbjni;6.29.5 in central\n",
-      "\tfound com.amazonaws#aws-java-sdk-bundle;1.11.828 in central\n",
-      "\tfound com.github.universal-automata#liblevenshtein;3.0.0 in central\n",
-      "\tfound com.google.protobuf#protobuf-java-util;3.0.0-beta-3 in central\n",
-      "\tfound com.google.protobuf#protobuf-java;3.0.0-beta-3 in central\n",
-      "\tfound com.google.code.gson#gson;2.3 in central\n",
-      "\tfound it.unimi.dsi#fastutil;7.0.12 in central\n",
-      "\tfound org.projectlombok#lombok;1.16.8 in central\n",
-      "\tfound com.google.cloud#google-cloud-storage;2.20.1 in central\n",
-      "\tfound com.google.guava#guava;31.1-jre in central\n",
-      "\tfound com.google.guava#failureaccess;1.0.1 in central\n",
-      "\tfound com.google.guava#listenablefuture;9999.0-empty-to-avoid-conflict-with-guava in central\n",
-      "\tfound com.google.errorprone#error_prone_annotations;2.18.0 in central\n",
-      "\tfound com.google.j2objc#j2objc-annotations;1.3 in central\n",
-      "\tfound com.google.http-client#google-http-client;1.43.0 in central\n",
-      "\tfound io.opencensus#opencensus-contrib-http-util;0.31.1 in central\n",
-      "\tfound com.google.http-client#google-http-client-jackson2;1.43.0 in central\n",
-      "\tfound com.google.http-client#google-http-client-gson;1.43.0 in central\n",
-      "\tfound com.google.api-client#google-api-client;2.2.0 in central\n",
-      "\tfound commons-codec#commons-codec;1.15 in central\n",
-      "\tfound com.google.oauth-client#google-oauth-client;1.34.1 in central\n",
-      "\tfound com.google.http-client#google-http-client-apache-v2;1.43.0 in central\n",
-      "\tfound com.google.apis#google-api-services-storage;v1-rev20220705-2.0.0 in central\n",
-      "\tfound com.google.code.gson#gson;2.10.1 in central\n",
-      "\tfound com.google.cloud#google-cloud-core;2.12.0 in central\n",
-      "\tfound io.grpc#grpc-context;1.53.0 in central\n",
-      "\tfound com.google.auto.value#auto-value-annotations;1.10.1 in central\n",
-      "\tfound com.google.auto.value#auto-value;1.10.1 in central\n",
-      "\tfound javax.annotation#javax.annotation-api;1.3.2 in central\n",
-      "\tfound commons-logging#commons-logging;1.2 in central\n",
-      "\tfound com.google.cloud#google-cloud-core-http;2.12.0 in central\n",
-      "\tfound com.google.http-client#google-http-client-appengine;1.43.0 in central\n",
-      "\tfound com.google.api#gax-httpjson;0.108.2 in central\n",
-      "\tfound com.google.cloud#google-cloud-core-grpc;2.12.0 in central\n",
-      "\tfound io.grpc#grpc-alts;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-grpclb;1.53.0 in central\n",
-      "\tfound org.conscrypt#conscrypt-openjdk-uber;2.5.2 in central\n",
-      "\tfound io.grpc#grpc-auth;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-protobuf;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-protobuf-lite;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-core;1.53.0 in central\n",
-      "\tfound com.google.api#gax;2.23.2 in central\n",
-      "\tfound com.google.api#gax-grpc;2.23.2 in central\n",
-      "\tfound com.google.auth#google-auth-library-credentials;1.16.0 in central\n",
-      "\tfound com.google.auth#google-auth-library-oauth2-http;1.16.0 in central\n",
-      "\tfound com.google.api#api-common;2.6.2 in central\n",
-      "\tfound io.opencensus#opencensus-api;0.31.1 in central\n",
-      "\tfound com.google.api.grpc#proto-google-iam-v1;1.9.2 in central\n",
-      "\tfound com.google.protobuf#protobuf-java;3.21.12 in central\n",
-      "\tfound com.google.protobuf#protobuf-java-util;3.21.12 in central\n",
-      "\tfound com.google.api.grpc#proto-google-common-protos;2.14.2 in central\n",
-      "\tfound org.threeten#threetenbp;1.6.5 in central\n",
-      "\tfound com.google.api.grpc#proto-google-cloud-storage-v2;2.20.1-alpha in central\n",
-      "\tfound com.google.api.grpc#grpc-google-cloud-storage-v2;2.20.1-alpha in central\n",
-      "\tfound com.google.api.grpc#gapic-google-cloud-storage-v2;2.20.1-alpha in central\n",
-      "\tfound com.fasterxml.jackson.core#jackson-core;2.14.2 in central\n",
-      "\tfound com.google.code.findbugs#jsr305;3.0.2 in central\n",
-      "\tfound io.grpc#grpc-api;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-stub;1.53.0 in central\n",
-      "\tfound org.checkerframework#checker-qual;3.31.0 in central\n",
-      "\tfound io.perfmark#perfmark-api;0.26.0 in central\n",
-      "\tfound com.google.android#annotations;4.1.1.4 in central\n",
-      "\tfound org.codehaus.mojo#animal-sniffer-annotations;1.22 in central\n",
-      "\tfound io.opencensus#opencensus-proto;0.2.0 in central\n",
-      "\tfound io.grpc#grpc-services;1.53.0 in central\n",
-      "\tfound com.google.re2j#re2j;1.6 in central\n",
-      "\tfound io.grpc#grpc-netty-shaded;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-googleapis;1.53.0 in central\n",
-      "\tfound io.grpc#grpc-xds;1.53.0 in central\n",
-      "\tfound com.navigamez#greex;1.0 in central\n",
-      "\tfound dk.brics.automaton#automaton;1.11-8 in central\n",
-      "\tfound com.johnsnowlabs.nlp#tensorflow-cpu_2.12;0.4.4 in central\n",
-      "\tfound com.microsoft.onnxruntime#onnxruntime;1.15.0 in central\n",
-      "\tfound org.apache.hadoop#hadoop-aws;3.2.2 in central\n",
-      ":: resolution report :: resolve 3414ms :: artifacts dl 330ms\n",
-      "\t:: modules in use:\n",
-      "\tcom.amazonaws#aws-java-sdk-bundle;1.11.828 from central in [default]\n",
-      "\tcom.fasterxml.jackson.core#jackson-core;2.14.2 from central in [default]\n",
-      "\tcom.github.universal-automata#liblevenshtein;3.0.0 from central in [default]\n",
-      "\tcom.google.android#annotations;4.1.1.4 from central in [default]\n",
-      "\tcom.google.api#api-common;2.6.2 from central in [default]\n",
-      "\tcom.google.api#gax;2.23.2 from central in [default]\n",
-      "\tcom.google.api#gax-grpc;2.23.2 from central in [default]\n",
-      "\tcom.google.api#gax-httpjson;0.108.2 from central in [default]\n",
-      "\tcom.google.api-client#google-api-client;2.2.0 from central in [default]\n",
-      "\tcom.google.api.grpc#gapic-google-cloud-storage-v2;2.20.1-alpha from central in [default]\n",
-      "\tcom.google.api.grpc#grpc-google-cloud-storage-v2;2.20.1-alpha from central in [default]\n",
-      "\tcom.google.api.grpc#proto-google-cloud-storage-v2;2.20.1-alpha from central in [default]\n",
-      "\tcom.google.api.grpc#proto-google-common-protos;2.14.2 from central in [default]\n",
-      "\tcom.google.api.grpc#proto-google-iam-v1;1.9.2 from central in [default]\n",
-      "\tcom.google.apis#google-api-services-storage;v1-rev20220705-2.0.0 from central in [default]\n",
-      "\tcom.google.auth#google-auth-library-credentials;1.16.0 from central in [default]\n",
-      "\tcom.google.auth#google-auth-library-oauth2-http;1.16.0 from central in [default]\n",
-      "\tcom.google.auto.value#auto-value;1.10.1 from central in [default]\n",
-      "\tcom.google.auto.value#auto-value-annotations;1.10.1 from central in [default]\n",
-      "\tcom.google.cloud#google-cloud-core;2.12.0 from central in [default]\n",
-      "\tcom.google.cloud#google-cloud-core-grpc;2.12.0 from central in [default]\n",
-      "\tcom.google.cloud#google-cloud-core-http;2.12.0 from central in [default]\n",
-      "\tcom.google.cloud#google-cloud-storage;2.20.1 from central in [default]\n",
-      "\tcom.google.code.findbugs#jsr305;3.0.2 from central in [default]\n",
-      "\tcom.google.code.gson#gson;2.10.1 from central in [default]\n",
-      "\tcom.google.errorprone#error_prone_annotations;2.18.0 from central in [default]\n",
-      "\tcom.google.guava#failureaccess;1.0.1 from central in [default]\n",
-      "\tcom.google.guava#guava;31.1-jre from central in [default]\n",
-      "\tcom.google.guava#listenablefuture;9999.0-empty-to-avoid-conflict-with-guava from central in [default]\n",
-      "\tcom.google.http-client#google-http-client;1.43.0 from central in [default]\n",
-      "\tcom.google.http-client#google-http-client-apache-v2;1.43.0 from central in [default]\n",
-      "\tcom.google.http-client#google-http-client-appengine;1.43.0 from central in [default]\n",
-      "\tcom.google.http-client#google-http-client-gson;1.43.0 from central in [default]\n",
-      "\tcom.google.http-client#google-http-client-jackson2;1.43.0 from central in [default]\n",
-      "\tcom.google.j2objc#j2objc-annotations;1.3 from central in [default]\n",
-      "\tcom.google.oauth-client#google-oauth-client;1.34.1 from central in [default]\n",
-      "\tcom.google.protobuf#protobuf-java;3.21.12 from central in [default]\n",
-      "\tcom.google.protobuf#protobuf-java-util;3.21.12 from central in [default]\n",
-      "\tcom.google.re2j#re2j;1.6 from central in [default]\n",
-      "\tcom.johnsnowlabs.nlp#spark-nlp_2.12;5.1.3 from central in [default]\n",
-      "\tcom.johnsnowlabs.nlp#tensorflow-cpu_2.12;0.4.4 from central in [default]\n",
-      "\tcom.microsoft.onnxruntime#onnxruntime;1.15.0 from central in [default]\n",
-      "\tcom.navigamez#greex;1.0 from central in [default]\n",
-      "\tcom.typesafe#config;1.4.2 from central in [default]\n",
-      "\tcommons-codec#commons-codec;1.15 from central in [default]\n",
-      "\tcommons-logging#commons-logging;1.2 from central in [default]\n",
-      "\tdk.brics.automaton#automaton;1.11-8 from central in [default]\n",
-      "\tio.grpc#grpc-alts;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-api;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-auth;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-context;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-core;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-googleapis;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-grpclb;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-netty-shaded;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-protobuf;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-protobuf-lite;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-services;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-stub;1.53.0 from central in [default]\n",
-      "\tio.grpc#grpc-xds;1.53.0 from central in [default]\n",
-      "\tio.opencensus#opencensus-api;0.31.1 from central in [default]\n",
-      "\tio.opencensus#opencensus-contrib-http-util;0.31.1 from central in [default]\n",
-      "\tio.opencensus#opencensus-proto;0.2.0 from central in [default]\n",
-      "\tio.perfmark#perfmark-api;0.26.0 from central in [default]\n",
-      "\tit.unimi.dsi#fastutil;7.0.12 from central in [default]\n",
-      "\tjavax.annotation#javax.annotation-api;1.3.2 from central in [default]\n",
-      "\torg.apache.hadoop#hadoop-aws;3.2.2 from central in [default]\n",
-      "\torg.checkerframework#checker-qual;3.31.0 from central in [default]\n",
-      "\torg.codehaus.mojo#animal-sniffer-annotations;1.22 from central in [default]\n",
-      "\torg.conscrypt#conscrypt-openjdk-uber;2.5.2 from central in [default]\n",
-      "\torg.projectlombok#lombok;1.16.8 from central in [default]\n",
-      "\torg.rocksdb#rocksdbjni;6.29.5 from central in [default]\n",
-      "\torg.threeten#threetenbp;1.6.5 from central in [default]\n",
-      "\t:: evicted modules:\n",
-      "\tcom.google.protobuf#protobuf-java-util;3.0.0-beta-3 by [com.google.protobuf#protobuf-java-util;3.21.12] in [default]\n",
-      "\tcom.google.protobuf#protobuf-java;3.0.0-beta-3 by [com.google.protobuf#protobuf-java;3.21.12] in [default]\n",
-      "\tcom.google.code.gson#gson;2.3 by [com.google.code.gson#gson;2.10.1] in [default]\n",
-      "\tcom.amazonaws#aws-java-sdk-bundle;1.11.563 by [com.amazonaws#aws-java-sdk-bundle;1.11.828] in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   77  |   0   |   0   |   4   ||   73  |   0   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-ad061c92-3e4d-41ab-829c-93e34080ce9f\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 73 already retrieved (0kB/32ms)\n",
-      "23/12/01 03:32:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2446,6 +2252,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aeb41029-1bdf-4fea-ac96-26127ad071b1",
+   "metadata": {},
+   "source": [
+    "### LINEAR REGRESSION MODEL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "id": "41f4e6ce-eb84-4b61-aaff-d4171766f3c0",
@@ -2591,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "a42a8bd0-82da-4dea-8308-34230e618f7b",
    "metadata": {
     "tags": []
@@ -2850,7 +2664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "b0c40c80-c409-47b5-aa13-057c5caf1b0e",
    "metadata": {
     "tags": []
@@ -2862,13 +2676,57 @@
        "0.2532836368703225"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "08740824-15c2-4133-973b-5f394da4a211",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "evaluator = RegressionEvaluator(labelCol=\"score\", predictionCol=\"prediction\", metricName=\"r2\")\n",
+    "r2 = evaluator.evaluate(transformed_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3b3d3a87-0e05-4ef0-8f43-61a541928636",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.288839039507672"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30910b4b-3024-4a01-97e8-34d6d7caf278",
+   "metadata": {},
+   "source": [
+    "### DECISION TREE REGRESSION"
    ]
   },
   {
@@ -3005,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "8cc5c2d5-b2f4-4578-856a-542463e6c23c",
    "metadata": {
     "tags": []
@@ -3017,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "2bab4a70-ea2d-4e7b-9fd6-5e071f07792f",
    "metadata": {
     "tags": []
@@ -3350,6 +3208,50 @@
       ]
      },
      "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5cc1c9d1-2f82-40dd-bd3a-6d6a1f697954",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(labelCol=\"score\", predictionCol=\"prediction\", metricName=\"r2\")\n",
+    "r2_dt = evaluator.evaluate(transformed_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "514261c0-8023-40c7-9693-863c64d8c5ec",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22440725296383934"
+      ]
+     },
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
