--- a/website-source/ml.qmd
+++ b/website-source/ml.qmd
@@ -148,7 +148,7 @@ The confusion matrix post-tuning presents a dramatic decrease in misclassified i
 
 
 
-## Predicting Popularity: Machine Learning for Reddit Engagement Analysis
+## Classifying Popularity: Machine Learning for Reddit Engagement Analysis
 
 In the dynamic and diverse ecosystem of Reddit, where every submission vies for attention, being able to predict the popularity of a post holds immense value. The second model in this project endeavors to classify Reddit submissions as 'popular' or 'not popular,' serving a multitude of purposes. For content creators and marketers, understanding the elements that contribute to a post's popularity can inform their strategy to capture the community's interest more effectively. For the average user, this classification can enhance the personalization of their feed, bringing popular, engaging content to the forefront. Additionally, platform moderators can utilize insights from popularity predictions to better manage the influx of content and maintain the quality of user experience. This binary classification model, powered by machine learning, not only aims to decipher the attributes that propel a post to popularity but also to apply this knowledge in a way that enriches the Reddit landscape for all participants.
 
@@ -183,7 +183,7 @@ All the other steps were the same as the above model.
     </td>
     <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
       <figure>
-        <img src="img/Class_Imbalance_Model2.png" width="100%">
+        <img src="img/Class_Imbalance_Model2-downsampled.png" width="100%">
         <figcaption>Figure-3 (b): Target variable Distribution after downsampling</figcaption>
       </figure>
     </td>
@@ -225,19 +225,19 @@ In the task of predicting the popularity of Reddit posts, we initially utilized 
     <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
       <figure>
         <img src="img/Heatmap1_CM_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (a): Confusion Matrix for Logistic Regression Model</figcaption>
+        <figcaption>Figure-4 (a): Confusion Matrix for Logistic Regression Model</figcaption>
       </figure>
     </td>
     <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
       <figure>
         <img src="img/ROC1_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (b): ROC curve for Logistic Regression Model</figcaption>
+        <figcaption>Figure-4 (b): ROC curve for Logistic Regression Model</figcaption>
       </figure>
     </td>
   </tr>
   <tr>
     <td colspan="2" style="text-align: center; border: none;">
-      <figcaption>Figure-2</figcaption>
+      <figcaption>Figure-4</figcaption>
     </td>
   </tr>
 </table>
@@ -256,19 +256,19 @@ To address this and capture the complexities of Reddit's data more effectively, 
     <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
       <figure>
         <img src="img/Heatmap2_CM_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (a): Confusion Matrix for Decision Tree Model</figcaption>
+        <figcaption>Figure-5 (a): Confusion Matrix for Decision Tree Model</figcaption>
       </figure>
     </td>
     <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
       <figure>
         <img src="img/ROC2_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (b): ROC curve for Decision Tree Model</figcaption>
+        <figcaption>Figure-5 (b): ROC curve for Decision Tree Model</figcaption>
       </figure>
     </td>
   </tr>
   <tr>
     <td colspan="2" style="text-align: center; border: none;">
-      <figcaption>Figure-2</figcaption>
+      <figcaption>Figure-5</figcaption>
     </td>
   </tr>
 </table>
@@ -287,62 +287,22 @@ The comparison of these two models highlights the importance of choosing the rig
 
 
 
-## Predicting Popularity: Machine Learning for Reddit Engagement Analysis
+## Predicting Submission Scores: A Machine Learning Approach to Forecasting Reddit Scores
 
-In the dynamic and diverse ecosystem of Reddit, where every submission vies for attention, being able to predict the popularity of a post holds immense value. The second model in this project endeavors to classify Reddit submissions as 'popular' or 'not popular,' serving a multitude of purposes. For content creators and marketers, understanding the elements that contribute to a post's popularity can inform their strategy to capture the community's interest more effectively. For the average user, this classification can enhance the personalization of their feed, bringing popular, engaging content to the forefront. Additionally, platform moderators can utilize insights from popularity predictions to better manage the influx of content and maintain the quality of user experience. This binary classification model, powered by machine learning, not only aims to decipher the attributes that propel a post to popularity but also to apply this knowledge in a way that enriches the Reddit landscape for all participants.
+In the busy world of Reddit, a post's score, which is the total of its upvotes minus its downvotes, is really important for understanding how much users like the content. We're looking at different things like what the post is about, when it was posted, and how users interact with it, to predict the score of a Reddit post. Being able to guess a post's score helps us figure out what makes a post appealing to users. This is great for people who create content and those who manage the site, as it helps them know what their audience likes. We're using advanced technology to figure out the secrets behind a successful Reddit post, aiming to make the platform even more engaging for its users.
 
 ### Data Cleaning
 
-**Feature Engineering**
+The cleaning process for this model was similar to the previous model. The only difference was that we did not Vectorize (use TF-IDF) for the text data primarily because the focus of this model is different compared to previous models. Text vectorization techniques like TF-IDF are powerful for understanding and analyzing the content of text data, especially in tasks like classification where the text's topic or sentiment is crucial. In predicting submission scores, the emphasis is likely on quantifiable metrics such as user interaction data (e.g., number of comments, time since posted) and post characteristics (e.g., length of the post, presence of links or media), which have a more direct and measurable impact on a post's popularity as indicated by its score.
 
-Along with the existing features, the dataset was enhanced with new features that could be crucial for the classification of Reddit posts.
-
-To enhance the accuracy of predicting a post's popularity, we introduced 'Sentiment Score' and 'Emotion' as new features, recognizing that the tone and emotional context of a post greatly influence user engagement. The sentiment score captures the overall positivity or negativity of the content, while the emotion feature taps into the specific feelings a post might evoke, both of which are key indicators of a post's potential to resonate with and captivate the Reddit community.
-
-`Sentiment Analysis` The 'body' text was analyzed using the Spark NLP sentiment analysis model (sentimentdl_use_twitter) to extract sentiment score.
-
-`Emotion Analysis` The 'body' text was analyzed using the Spark NLP emotion analysis model (classifierdl_use_emotion) to extract different emotions.
-
-All the other steps were the same as the above model.
 
 ### Data Pre-Processing for Modeling
-
-`Target Variable Generation` The 'num_comments' column was used to generate the target variable 'is_popular' by applying a threshold of 27 (mean number of comments). Posts with a score of 27 or above were classified as 'popular' while those with a score below 27 were classified as 'not popular'.
-
-`Handling Class Imbalance` The dataset was balanced by downsampling the majority class ('not popular') to match the minority class ('popular').
-
-```{=html}
-<table style="width: 100%; border: none;">
-  <tr>
-    <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <figure>
-        <img src="img/Class_Imbalance_Model2.png" width="100%">
-        <figcaption>Figure-3 (a): Target variable Distribution</figcaption>
-      </figure>
-    </td>
-    <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <figure>
-        <img src="img/Class_Imbalance_Model2.png" width="100%">
-        <figcaption>Figure-3 (b): Target variable Distribution after downsampling</figcaption>
-      </figure>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2" style="text-align: center; border: none;">
-      <figcaption>Figure-3</figcaption>
-    </td>
-  </tr>
-</table>
-```
-
-<!-- ![Figure-1: ](img/Class_Imbalance_Model2.png){width="100%" fig-align="center"}
-![Figure-1: ](img/Class_Imbalance_Model2.png){width="100%" fig-align="center"} -->
 
 `String Indexing` Key categorical features such as 'over_18', 'is_self', 'is_video', 'has_media', and 'subreddit' were transformed using StringIndexer. This step converted categorical strings into numerical indices, making them suitable for machine learning models.
 
 `One-Hot Encoding` The indexed categories were further encoded using OneHotEncoder. This process transformed the indexed categories into a binary vector representation, a necessary step for handling categorical data in many machine learning algorithms.
 
-`Vector Assembler` A VectorAssembler was utilized to combine various feature columns into a single vector column. This included both the newly created feature vectors from one-hot encoding and the existing numerical features such as 'sentiment_score', 'score', 'post_length', 'hour_of_day', 'day_of_week', 'day_of_month', 'month', and 'year'. This assembly created a unified feature vector essential for feeding into the machine learning models.
+`Vector Assembler` A VectorAssembler was utilized to combine various feature columns into a single vector column. This included both the newly created feature vectors from one-hot encoding and the existing numerical features such as 'sentiment_score', 'num_comments', 'post_length', 'hour_of_day', 'day_of_week', 'day_of_month', 'month', and 'year'. This assembly created a unified feature vector essential for feeding into the machine learning models.
 
 `Pipeline Definition` A Pipeline was defined incorporating all the stages of string indexing, one-hot encoding, and vector assembly. This approach streamlined the preprocessing steps and ensured consistency across the data.
 
@@ -352,77 +312,33 @@ All the other steps were the same as the above model.
 
 #### Model Selection
 
-For predicting whether Reddit posts will be popular or not, we started with a simple Logistic Regression model. This model was chosen for its ease of use and good performance with basic yes/no type questions, like predicting if a post will be popular. However, to deal with the large and complex data from Reddit, we later switched to using a Decision Tree classifier. This model is better for handling lots of different factors in the data and makes it easier to understand how it decides if a post will be popular.
+For predicting Reddit post scores, we first used Linear Regression. This method is straightforward and good for starting out, as it helps us see how different things about a post might affect its popularity. But Reddit's data can be quite complex, so we then switched to using a Decision Tree Regressor. This method is better at handling the tricky and detailed patterns found in social media data, like when posts are made and how people interact with them, giving us a clearer picture of what makes a post score high or low.
 
 #### Model Training
 
-In the task of predicting the popularity of Reddit posts, we initially utilized a Logistic Regression model. This model, known for its straightforwardness and effectiveness in binary classification, served as a fundamental starting point. It yielded promising results, demonstrating high accuracy in training (93.41%) but a moderate accuracy in testing (75.11%). This discrepancy indicated that while the model performed well on familiar data, it was less effective with new, unseen data.
+In analyzing the performance of the two models employed for predicting Reddit post scores, Linear Regression and Decision Tree, distinct outcomes were observed. The Linear Regression model achieved a Root Mean Square Error (RMSE) of 1351.79 on training data and 1385.97 on testing data, with R-squared (R2) values of 0.25 and 0.3, respectively. These figures suggest moderate accuracy with a slightly better fit on the testing data. On the other hand, the Decision Tree model showed a slightly lower RMSE of 1324.6 in training, but a higher RMSE of 1447.39 in testing, indicating it was more accurate in training but less so with new data. The R2 values were 0.28 for training and 0.29 for testing, closely mirroring those of Linear Regression. Overall, while both models offered insights into the factors influencing post scores, their effectiveness was somewhat limited, pointing to the need for further refinement or exploration of more sophisticated models to enhance prediction accuracy.
+
+These RMSE scores depict how good our model is. The lower the RMSE, the better the model is at predicting the score of a post. The RMSE for the Linear Regression model is 1351.79 on the training data and 1385.97 on the testing data. The RMSE for the Decision Tree model is 1324.6 on the training data and 1447.39 on the testing data. Such high RMSE does not always mean that the model is performing bad. The RMSE also depends on the range of the target variable. An model with RMSE of 1200 when the target variable range is 100-200 is a bad model. But an RMSE of 1200 when the target variable range is 10000-20000 is a good model. In our case, the target variable range is 0-20000. So, the RMSE of 1351.79 for Linear Regression and 1324.6 for Decision Tree are not bad.
 
 ```{=html}
-<table style="width: 100%; border: none;">
-  <tr>
-    <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <figure>
-        <img src="img/Heatmap1_CM_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (a): Confusion Matrix for Logistic Regression Model</figcaption>
-      </figure>
-    </td>
-    <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <figure>
-        <img src="img/ROC1_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (b): ROC curve for Logistic Regression Model</figcaption>
-      </figure>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2" style="text-align: center; border: none;">
-      <figcaption>Figure-2</figcaption>
-    </td>
-  </tr>
-</table>
 
-```
-<!-- ![Figure-1: ](img/Heatmap1_CM_Classification_Model1.png){width="100%" fig-align="center"}
-![Figure-2: ](img/ROC1_Classification_Model1.png){width="100%" fig-align="center"} -->
+![Figure-7: Parity Plot for Decision Tree Regressor](img/regression_plot.png){width="100%" fig-align="center"}
 
-The initial Decision Tree model provided insightful outcomes. It showed a moderate level of accuracy in predicting post popularity, as evidenced by the ROC curve and other performance metrics. However, there were still instances of incorrect predictions, signaling the need for further model optimization.
-
-To address this and capture the complexities of Reddit's data more effectively, we transitioned to a Decision Tree classifier. The Decision Tree model, adept at handling diverse datasets, showed a more balanced performance with training accuracy at 87.44% and testing accuracy at 87.20%. This indicated a better generalization capability of the model on new data compared to the Logistic Regression model.
-
-```{=html}
-<table style="width: 100%; border: none;">
-  <tr>
-    <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <figure>
-        <img src="img/Heatmap2_CM_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (a): Confusion Matrix for Decision Tree Model</figcaption>
-      </figure>
-    </td>
-    <td style="width: 50%; text-align: center; vertical-align: bottom; border: none;">
-      <figure>
-        <img src="img/ROC2_Classification_Model2.png" width="100%">
-        <figcaption>Figure-2 (b): ROC curve for Decision Tree Model</figcaption>
-      </figure>
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2" style="text-align: center; border: none;">
-      <figcaption>Figure-2</figcaption>
-    </td>
-  </tr>
-</table>
-
-```
 <!-- 
 ![Figure-3: ](img/Heatmap2_CM_Classification_Model1.png){width="100%" fig-align="center"}
 ![Figure-4: ](img/ROC2_Classification_Model1.png){width="100%" fig-align="center"} -->
 
-| Model               | Accuracy Train | Accuracy Test | F1 Score Train | F1 Score Test | Precision Train | Precision Test | Recall Train | Recall Test |
-|---------------------|----------------|---------------|----------------|---------------|-----------------|----------------|--------------|-------------|
-| Logistic Regression | 0.934118       | 0.751146      | 0.934017       | 0.750600      | 0.934704        | 0.751036       | 0.934118     | 0.751146    |
-| Decision Tree       | 0.874378       | 0.872044      | 0.874431       | 0.872105      | 0.874632        | 0.872316       | 0.874378     | 0.872044    |
+| Model           | RMSE Train | RMSE Test | R2 Train | R2 Test |
+|-----------------|------------|-----------|----------|---------|
+| Linear Regression | 1351.79   | 1385.97   | 0.25     | 0.28     |
+| Decision Tree   | 1324.6     | 1447.39   | 0.28     | 0.22    |
 
-The comparison of these two models highlights the importance of choosing the right algorithm for specific data characteristics. The Decision Tree's improved ability to generalize, as evidenced by the more consistent accuracy between training and testing, underscores its suitability for the dynamic and varied content on Reddit. This analysis demonstrates the value of model selection and tuning in the field of popularity prediction on social media platforms.
+Trying to predict the scores of Reddit posts, which are calculated by subtracting downvotes from upvotes, turned out to be quite tough and the results weren't as good as hoped. One big issue is that the same score can mean very different things. For example, a score of 1 could be because only one person liked the post and nobody disliked it, or it could be that 10,000 people liked it but 9,999 didn't. This makes it really hard to predict what's going on with a post just based on its score.
+
+Also, a score doesn't always tell the whole story about how users feel about a post. A post with lots of likes and dislikes probably means people have strong opinions about it, while a post with a few likes might have just not been seen by many people. This kind of difference is a big challenge for models like Linear Regression and Decision Trees. These models find it difficult to understand the real reasons behind a post's score, especially because a score comes from both likes and dislikes. So, while these models can give some general ideas, they aren't very good at accurately guessing a Reddit post's score due to how complex and unclear the scoring can be.
+
+
+
 
 
 
