--- a/website-source/ml.qmd
+++ b/website-source/ml.qmd
@@ -147,6 +147,8 @@ The Hyperparameter tuning for the Random Forest classifier yielded a significant
 
 The confusion matrix post-tuning presents a dramatic decrease in misclassified instances, particularly in distinguishing 'Movies' from 'Anime'. Furthermore, the ROC curve, with an area under the curve (AUC) of 0.95, indicates a superior model performance in differentiating between the two classes as compared to the pre-tuned state, which had an AUC of 0.76. This stark contrast in the AUC values before and after tuning underscores the impact of fine-tuning hyperparameters.
 
+The source code for this model can be found [here](project_ml.html).
+
 
 
 
@@ -287,7 +289,7 @@ To address this and capture the complexities of Reddit's data more effectively, 
 
 The comparison of these two models highlights the importance of choosing the right algorithm for specific data characteristics. The Decision Tree's improved ability to generalize, as evidenced by the more consistent accuracy between training and testing, underscores its suitability for the dynamic and varied content on Reddit. This analysis demonstrates the value of model selection and tuning in the field of popularity prediction on social media platforms.
 
-
+The source code for this model can be found [here](project_ml3.html).
 
 ## Predicting Submission Scores: A Machine Learning Approach to Forecasting Reddit Scores
 
@@ -339,6 +341,7 @@ Trying to predict the scores of Reddit posts, which are calculated by subtractin
 
 Also, a score doesn't always tell the whole story about how users feel about a post. A post with lots of likes and dislikes probably means people have strong opinions about it, while a post with a few likes might have just not been seen by many people. This kind of difference is a big challenge for models like Linear Regression and Decision Trees. These models find it difficult to understand the real reasons behind a post's score, especially because a score comes from both likes and dislikes. So, while these models can give some general ideas, they aren't very good at accurately guessing a Reddit post's score due to how complex and unclear the scoring can be.
 
+The source code for this model can be found [here](project_ml2.html).
 
 
 
